Update: add logout, refresh token, reset password. Update readme and documentation
