# src/main/java/dev/mathalama/identityservice/application/dto/AuthResponse.java
@@ -1,0 +1,6 @@
+package dev.mathalama.identityservice.application.dto;
+
+public record AuthResponse(
+        String accessToken,
+        String refreshToken
+) {}
