# src/main/java/dev/mathalama/identityservice/application/dto/RefreshTokenRequest.java
@@ -1,0 +1,7 @@
+package dev.mathalama.identityservice.application.dto;
+
+import jakarta.annotation.Nonnull;
+
+public record RefreshTokenRequest(
+        @Nonnull String refreshToken
+) {}
