# src/main/java/dev/mathalama/identityservice/application/dto/ResetPasswordRequest.java
@@ -1,0 +1,10 @@
+package dev.mathalama.identityservice.application.dto;
+
+import jakarta.annotation.Nonnull;
+
+public record ResetPasswordRequest(
+        @Nonnull String username,
+        @Nonnull String oldPassword,
+        @Nonnull String newPassword
+) {
+}
