# src/main/java/dev/mathalama/identityservice/application/service/AuthService.java
@@ -9,7 +9,9 @@ public interface AuthService {
     UserDetails loadUserByUsername(String username) throws UsernameNotFoundException;
     void register(String username, String email, String password);
     Users authenticate(SignInRequest request);
-    void changeCurrentPassword(String username, String oldPassword, String newPassword);
+    AuthResponse refreshToken(String refreshToken);
+    void logout(String userId, String accessToken);
+    void resetPassword(String username, String oldPassword, String newPassword);
     void assignRoleToUser(String username, String roleName);
     VerificationResponse verifyEmail(String token);
     VerificationResponse resendVerificationEmail(String email);
