# src/main/java/dev/mathalama/identityservice/infrastructure/config/SecurityConfig.java
@@ -52,8 +52,9 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/auth/register", "/auth/authenticate", "/auth/verify-email", "/auth/resend-verification").permitAll()
+                        .requestMatchers("/auth/register", "/auth/authenticate", "/auth/refresh", "/auth/verify-email", "/auth/resend-verification").permitAll()
                         .requestMatchers("/actuator/health").permitAll()
+                        .requestMatchers("/auth/logout").authenticated()
                         .requestMatchers("/api/**").authenticated()
                         .anyRequest().denyAll()
                 )
